- 签到、余额指令显示的余额都用数字并且不要科学计数法